--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,33 +15,41 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           persist-credentials: "false"
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
           node-version: 22.x
+          cache: "pnpm"
       - uses: foundry-rs/foundry-toolchain@82dee4ba654bd2146511f85f0d013af94670c4de # v1.4.0
         with:
           version: stable
-      - run: npm ci
-      - run: npm run compile
-      - run: npm run build:ts
-      - run: npm test
-      - run: npm run coverage
+      - run: pnpm install
+      - run: pnpm compile
+      - run: pnpm build:ts
+      - run: pnpm test
+      - run: pnpm coverage
   build-and-test-unix:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           persist-credentials: "false"
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
           node-version: 22.x
+          cache: "pnpm"
       - uses: foundry-rs/foundry-toolchain@82dee4ba654bd2146511f85f0d013af94670c4de # v1.4.0
         with:
           version: stable
-      - run: npm ci
-      - run: npm run prettier:check
-      - run: npm run lint
-      - run: npm run compile
-      - run: npm run build:ts
-      - run: npm test
-      - run: npm run coverage
+      - run: pnpm install
+      - run: pnpm prettier:check
+      - run: pnpm lint
+      - run: pnpm compile
+      - run: pnpm build:ts
+      - run: pnpm test
+      - run: pnpm coverage
